2004-01-04  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>

	* applications.src: Added GnoCHM.

2004-01-03  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>

	* applications.src: Added Narim and GDick. Changed the mail address
	for applying new application additions from lgs@cvs.gnome.org to
	pygtk-web@pygtk.org.

2003-12-23  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>

	* feedback.src: added a small section about how to contact the web
	maintainers.

	* head.src (xml): changed the mail contact address to
	pygtk-web@pygtk.org.

2003-12-16  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>

	* applications.src: added Meld

	* screenshots.src: removed the first screenshots because it actually
	shows a broken feature

2003-12-15  Johan Dahlin  <johan@gnome.org>

	* applications.src: added pyGestor

2003-12-13  Johan Dahlin  <johan@gnome.org>

	* people.src: Fix typo.

2003-12-15  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>

	* applications.src: added matplotlib and a comment at the end of the
	page for submitting new apps.

2003-12-15  Lorenzo Gil Sanchez <lgs@cvs.gnome.org>

	* img/appwindow.png, img/colorselector.png, messagedialog.png: Changed
	the old screenshots because they were taken with the spanish locale
	instead of the english one.
	
2003-12-13  Christian Reis <kiko@async.com.br>

    * Makefile: add commands to the extras target to pull the reference and
    tutorial tarballs from John's moeraki.com. Simplified some of the
    directory creation rules. The Makefile is rebuilding every file when one
    of them changes, which seems broken, but right now it does the job. 

    We can move to rsync when it's set up (it's better in dealing with tarball
    changes than a wget -c).

    * tutorial.src, reference.src: reordered tutorials and commented out lgs'
    version for now. Relinked tarballs from dist/.

2003-12-12  Lorenzo Gil Sanchez  <lgs@cvs.gnome.org>

	* feedback.src: More information about how to fill a bug report.

	* people.src: Updated description for kiko.
